[package]
name = "rustweet"
version = "0.1.0"
authors = ["PhiZero <kanta03085@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
url = "2.1.1"
tokio = { version  = "0.2.22", features = ["full"] }
